fixes vertical layout bug

--- a/travel-recipes/styles/travel-recipes.css
+++ b/travel-recipes/styles/travel-recipes.css
@@ -37,6 +37,7 @@ h3 {
 
 .container {
 	max-width: 700px;
+	margin-top: 70px;
 }
 
 .content {
@@ -81,6 +82,7 @@ textarea:not(.button) {
 
 header {
 	position: fixed;
+	top: 0;
 	background-color: white;
 	width: 100%;
 	height: 65px;
